Моделирование косеакнсной ДН

--- a/AntennaWpfGUI/AntennaWpfGUI.csproj
+++ b/AntennaWpfGUI/AntennaWpfGUI.csproj
@@ -110,5 +110,10 @@
       <Name>TestProject</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="destribution.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
